--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- To anyone taking the time to read this, my code is a mess don't use this to learn from. -->
 <html>
 	<head>
-		<title id="title">Cookie Clicker &bull; 0</title>
+		<title id="title">Biscuit Buster &bull; 0</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
 		<!-- Bootstrap CSS -->
@@ -17,7 +17,7 @@
 				<br/>
 				<div align="center">
 					<img src="images/logo.png"/>
-					<h1 style="color:white;">Cookie Clicker</h1>
+					<h1 style="color:white;">Biscuit Buster</h1>
 				</div>
 				<br/>
 			</div>
