--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</div>
 			</div>
 				<div align="center">
-					<input onclick="clicked()" type="image" src="images/cookie.png"/>
+					<input id="cookieImage" onclick="clicked()" type="image" src="images/cookie.png"/>
 					<!--Because I'm nasty this disables holding enter >:) -->
 				</div>
 				<br/>
