--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					</div>
 				</div>
 			</div>
-				<div align="center">
+				<div align="center" style="height:500px;">
 					<input id="cookieImage" class="cookieImage" onclick="clicked()" type="image" src="images/cookie.png"/>
 					<!--Because I'm nasty this disables holding enter >:) -->
 				</div>
