--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		</div>
 		<br/>
 		<div class="container">
+
 			<div class="row">
 				<div class="col-sm-4">
 					<div align="left">
@@ -75,6 +76,7 @@
 			</div>
 			<hr class="bottomhr">
 			<p style="color:white;"><strong>Note:</strong> I plan to clone the real cookie clicker as closely as possible and as quickly as possible. Once development is complete I will release the static site files for you to place into your school folder and play it from there. I wont be having it hosted online because then school can just block it. With it being a static site on your files they can't do anything about it.<br/>I have it on here simply so you can test as development progresses, I'll keep updating this most of the time.<br/><br/><strong>Version 1.0x</strong></p>
+			<button class="btn btn-default"><a href="https://pastebin.com/q7Ej3RCE" target="_blank">Free Python code</a></button>
 		</div>
 		<!-- This one makes the magic happen -->
 		<script src="js/game.js"></script>
