--- a/index.html
+++ b/index.html
@@ -1,14 +1,86 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title id="windowTitle"></title>
+		<link rel="stylesheet" href="css/mainstyle.css">
 		<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 	</head>
+	<body>
+		<div id="importSaveDiv" class="importSave">
+			<h1 style="color:white;">Import Save Code</h1>
+			<p class="exImport"><b>Enter your code here</b></p>
+			<textarea id="importSave"></textarea><br/><br/>
+			<button class="customButton" onclick="Biscuit.ImportSave()"><b>Import</b></button>
+		</div>
+		<div id="exportSaveDiv" class="importSave">
+			<h1 style="color:white;">Export Save</h1>
+			<p class="exImport"><b>Copy this code somewhere safe!</b></p>
+			<textarea readonly id="exportSave"></textarea><br/><br/>
+			<button class="customButton" onclick="Biscuit.ExportSaveClose()"><b>Close</b></button>
+		</div>
+		<div id="topBar" style="background: url('images/topbar.jpg');">
+			<b>Biscuit Buster</b>
+			&bull; Complete ripoff of Cookie Clicker by Orteil
+			&bull; <button onclick="Biscuit.ImportSaveNavigation()" class="importbutton"><b>Import Save</b></button>
+			&bull; <button onclick="Biscuit.ExportSaveNavigation()" class="exportbutton"><b>Export Save</b></button>
+		</div>
+		<h1 align="center" id="biscuitText">0</h1>
+		<h3 align="center" id="biscuitPSText">per second: 0</h3>
+		<h3 class="bottom" align="center" id="biscuitPBText">per bust: 0</h3>
+		<div class="biscuitArea">
+			<input id="biscuitButton" class="padding" type="image" src="images/clicker.png" onclick="Biscuit.BiscuitClicked()">
 		</div>
 		<br/>
+		<hr>
+		<div class="row">
+			<div class="column" align="center">
+				<h3>Buildings Shop</h3>
+				<hr>
+					<button id="CursorsButton" class="group" onclick="Biscuit.UpdateShopMenu('Cursors')"><p class="left">Cursors</p><p id="CursorsCount" class="right">x 0</p></button>
+					<button id="GrandmasButton" class="group" onclick="Biscuit.UpdateShopMenu('Grandmas')"><p class="left">Grandmas</p><p id="GrandmasCount"class="right">x 0</p></button>
+					<button id="FarmsButton" class="group" onclick="Biscuit.UpdateShopMenu('Farms')"><p class="left">Farms</p><p id="FarmsCount"class="right">x 0</p></button>
+					<button id="MinesButton" class="group" onclick="Biscuit.UpdateShopMenu('Mines')"><p class="left">Mines</p><p id="MinesCount"class="right">x 0</p></button>
+					<button id="FactoriesButton" class="group" onclick="Biscuit.UpdateShopMenu('Factories')"><p class="left">Factories</p><p id="FactoriesCount"class="right">x 0</p></button>
+					<button id="BanksButton" class="group" onclick="Biscuit.UpdateShopMenu('Banks')"><p class="left">Banks</p><p id="BanksCount"class="right">x 0</p></button>
+					<button id="TemplesButton" class="group" onclick="Biscuit.UpdateShopMenu('Temples')"><p class="left">Temples</p><p id="TemplesCount"class="right">x 0</p></button>
+					<button id="Wizard TowersButton" class="group" onclick="Biscuit.UpdateShopMenu('Wizard Towers')"><p class="left">Wizard Towers</p><p id="Wizard TowersCount"class="right">x 0</p></button>
+					<button id="ShipmentsButton" class="group" onclick="Biscuit.UpdateShopMenu('Shipments')"><p class="left">Shipments</p><p id="ShipmentsCount"class="right">x 0</p></button>
+					<button id="Alchemy LabsButton" class="group" onclick="Biscuit.UpdateShopMenu('Alchemy Labs')"><p class="left">Alchemy Labs</p><p id="Alchemy LabsCount"class="right">x 0</p></button>
+					<button id="PortalsButton" class="group" onclick="Biscuit.UpdateShopMenu('Portals')"><p class="left">Portals</p><p id="PortalsCount"class="right">x 0</p></button>
+					<button id="Time MachinesButton" class="group" onclick="Biscuit.UpdateShopMenu('Time Machines')"><p class="left">Time Machines</p><p id="Time MachinesCount"class="right">x 0</p></button>
+					<button id="Antimatter CondensersButton" class="group" onclick="Biscuit.UpdateShopMenu('Antimatter Condensers')"><p class="left">Antimatter Condensers</p><p id="Antimatter CondensersCount"class="right">x 0</p></button>
+					<button id="PrismsButton" class="group" onclick="Biscuit.UpdateShopMenu('Prisms')"><p class="left">Prisms</p><p id="PrismsCount"class="right">x 0</p></button>
+					<button id="ChancemakersButton" class="group" onclick="Biscuit.UpdateShopMenu('Chancemakers')"><p class="left">Chancemakers</p><p id="ChancemakersCount"class="right">x 0</p></button>
 			</div>
+			<div id="shopContainer">
+				<div class="column2" style="padding-right:15px;">
+					<h3 id="shopTitle" align="center"></h3>
+					<hr>
+					<p id="shopInfo"></p><br/>
+					<button id="buyButton" class="buyButton"></button>
+					<br/><br/>
+					<p id="cannotAffordItem"></p>
 				</div>
+				<div class="column3">
+					<h3 align="center">Upgrades</h3>
+					<hr>
+					<p id="shopUpgradeInfo" style="clear:both;"></p>
 				</div>
 			</div>
 		</div>
+		<hr>
+		<h3 align="center"">Statistics</h3>
+		<hr>
+		<p id="StatsBlock" align="center"></p>
+		<hr>
+		<h3 align="center">Information</h3>
+		<hr>
+		<p align="center" class="Info">This took a ridiculously long amount of time to throw together. But for now click away and don't forget to add robust programming to your knowledge organiser! There could be a leaderboards system coming soon, however that mean I have to buy a webhost, they're cheap (a couple of pounds a month) but I don't know whether it would be worth it just for it to get blocked. When this does invetitably get blocked I will put it on a different website. What I will say however, if you want this to remain unblocked just dont let your teacher see you playing it and it should stick around.<br/><br/>As a disclaimer I will state that you should <b>NOT</b> play this during lesson time, however who am I to try and stop you.</p>
+		<!-- Base64 -->
+		<script src="js/base64.js"></script>
+		<!-- jQuery -->
+		<script src="js/jquery-3.3.1.min.js"></script>
+		<!-- Game -->
+		<script src="js/MainGame.js"></script>
 	</body>
 </html>
