--- a/index.html
+++ b/index.html
@@ -75,7 +75,11 @@
 		<hr>
 		<h3 align="center">Information</h3>
 		<hr>
-		<p align="center" class="Info">This took a ridiculously long amount of time to throw together. But for now click away and don't forget to add robust programming to your knowledge organiser! There could be a leaderboards system coming soon, however that mean I have to buy a webhost, they're cheap (a couple of pounds a month) but I don't know whether it would be worth it just for it to get blocked. When this does invetitably get blocked I will put it on a different website. What I will say however, if you want this to remain unblocked just dont let your teacher see you playing it and it should stick around.<br/><br/>As a disclaimer I will state that you should <b>NOT</b> play this during lesson time, however who am I to try and stop you.</p>
+		<p align="center" class="Info">This took a ridiculously long amount of time to throw together. But for now click away and don't forget to add robust programming to your knowledge organiser! There could be a leaderboards system coming soon, however that will mean I have to buy a webhost, they're cheap (a couple of pounds a month) but I don't know whether it would be worth it just for it to get blocked. When this does invetitably get blocked I will put it on a different website. What I will say however, if you want this to remain unblocked just dont let your teacher see you playing it and it should stick around.<br/><br/>As a disclaimer I will state that you should <b>NOT</b> play this during lesson time, however who am I to try and stop you.</p>
+		<hr>
+		<h3 align="center">Changelog</h3>
+		<hr>
+		<p align="center" class="Info"><b>Update 05/2/18</b><br/>&bull; Fixed a calculation error with biscuits per bust, was 10x what it should have been.</p>
 		<!-- Base64 -->
 		<script src="js/base64.js"></script>
 		<!-- jQuery -->
