--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		</div>
 		<div id="topBar" style="background: url('images/topbar.jpg');">
 			<b>Biscuit Buster</b>
+			&bull; Made by Alex K
 			&bull; Complete ripoff of Cookie Clicker by Orteil
 			&bull; <button onclick="Biscuit.ImportSaveNavigation()" class="importbutton"><b>Import Save</b></button>
 			&bull; <button onclick="Biscuit.ExportSaveNavigation()" class="exportbutton"><b>Export Save</b></button>
