--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113812068-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-113812068-1');
+		</script>
 		<title id="windowTitle"></title>
 		<link rel="stylesheet" href="css/mainstyle.css">
 		<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
