Changing to Kenworthy Clicker

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<h3 align="center" id="biscuitPSText">per second: 0</h3>
 		<h3 class="bottom" align="center" id="biscuitPBText">per bust: 0</h3>
 		<div class="biscuitArea">
-			<input id="biscuitButton" class="padding" type="image" src="images/clicker.png" onclick="Biscuit.BiscuitClicked()">
+			<input id="biscuitButton" class="padding" type="image" src="http://deathrow.cc/images/clicker.png" onclick="Biscuit.BiscuitClicked()">
 		</div>
 		<br/>
 		<hr>
