--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<button class="customButton" onclick="Biscuit.ExportSaveClose()"><b>Close</b></button>
 		</div>
 		<div id="topBar" style="background: url('images/topbar.jpg');">
-			<b>Biscuit Buster</b>
+			<b>Kenworthy Smasher</b>
 			&bull; Made by Alex K
 			&bull; Complete ripoff of Cookie Clicker by Orteil
 			&bull; <button onclick="Biscuit.ImportSaveNavigation()" class="importbutton"><b>Import Save</b></button>
