--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<button class="customButton" onclick="Biscuit.ExportSaveClose()"><b>Close</b></button>
 		</div>
 		<div id="topBar" style="background: url('images/topbar.jpg');">
-			<b>Kenworthy Smasher</b>
+			<b>Biscuit Buster</b>
 			&bull; Made by Alex K
 			&bull; Complete ripoff of Cookie Clicker by Orteil
 			&bull; <button onclick="Biscuit.ImportSaveNavigation()" class="importbutton"><b>Import Save</b></button>
@@ -38,7 +38,7 @@
 		<h3 align="center" id="biscuitPSText">per second: 0</h3>
 		<h3 class="bottom" align="center" id="biscuitPBText">per bust: 0</h3>
 		<div class="biscuitArea">
-			<input id="biscuitButton" class="padding" type="image" src="http://deathrow.cc/images/clicker.png" onclick="Biscuit.BiscuitClicked()">
+			<input id="biscuitButton" class="padding" type="image" src="images/clicker.png" onclick="Biscuit.BiscuitClicked()">
 		</div>
 		<br/>
 		<hr>
